--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Informasjon - Politiansatte</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Politiet</title>
 </head>
-
 <body>
-  <main>
-    <h1>Kodebrikke</h1>
-  </main>
+    <header>
+        <img src="politi_logo.jpg" alt="Organization Logo" class="logo">
+        <h1 class="organization-name">Politiet</h1>
+    </header>
+    <main>
+        <div class="container">
+            <h2>Velkommen til pålogging for Politiet</h2>
+            <div class="button-container">
+                <a href="https://mobiliti.politiet.no/" class="button">Bruker du brikke, trykk her</a>
+                <a href="https://fasmobilititest.politiet.no" class="button">Bruker du autenticator, trykk her</a>
+            </div>
+            <p>Kontakt oss: pol.i.ti@politiet.no | Phone: +47 12 345 67</p>
+        </div>
+    </main>
+    <footer>
+        &copy; Politites IT-enhet.
+    </footer>
 </body>
-
 </html>
