glemt passord lenke

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
             <div class="button-container">
                 <a href="https://mobiliti.politiet.no/" class="button">Bruker du brikke, trykk her</a>
                 <a href="https://fasmobilititest.politiet.no" class="button">Bruker du autenticator, trykk her</a>
-            </div>
+                <a href="https://aka.ms/sspr" class="button">Glemt passord, trykk her</a>
+              </div>
             <p>Kontakt oss: pol.i.ti@politiet.no | Phone: +47 12 345 67</p>
         </div>
     </main>
